# mu-trainer

./: .gitignore  README.md  pyproject.toml
src/trainer_test/: __init__.py  audio_service.py  image_service.py  keyboard_service.py  mouse_service.py  notificator_service.py  screenshot_service.py  trainer.py  window_service.py
